--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: "fr-FR" }}">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,7 @@
       <div id="banner">
         <span id="logo"></span>
 
-        <a href="http://mrmen.github.io/cours-maths" class="button fork"><strong>Accueil</strong></a>
+        <a href="http://mrmen.github.io/2023-2024" class="button fork"><strong>Accueil</strong></a>
         {% if site.show_downloads %}
           <div class="downloads">
             <span>Downloads:</span>
